# grpc-gateway

./: .gitignore  .travis.yml  BUILD  CONTRIBUTING.md
examples/: BUILD.bazel  client_test.go  integration_test.go  main.go  main_test.go  proto_error_test.go
examples/clients/abe/: BUILD.bazel
examples/clients/echo/: BUILD.bazel
examples/examplepb/: BUILD.bazel  a_bit_of_everything.pb.go  a_bit_of_everything.pb.gw.go  echo_service.pb.gw.go  flow_combination.pb.gw.go  stream.pb.go  stream.pb.gw.go
examples/server/: BUILD.bazel  a_bit_of_everything.go  echo.go  flow_combination.go  main.go
examples/server/cmd/example-server/: BUILD.bazel  main.go
examples/sub/: BUILD.bazel
examples/sub2/: BUILD.bazel
options/: BUILD.bazel
protoc-gen-grpc-gateway/: BUILD.bazel  main.go
protoc-gen-grpc-gateway/descriptor/: BUILD.bazel  services.go  services_test.go  types.go
protoc-gen-grpc-gateway/generator/: BUILD.bazel  generator.go
protoc-gen-grpc-gateway/gengateway/: BUILD.bazel  generator.go  generator_test.go  template.go  template_test.go
protoc-gen-grpc-gateway/httprule/: BUILD.bazel  compile.go  compile_test.go
protoc-gen-swagger/: BUILD.bazel  main.go  main_test.go
protoc-gen-swagger/genswagger/: BUILD.bazel  generator.go  template.go  template_test.go  types.go
protoc-gen-swagger/options/: BUILD.bazel  annotations.proto  openapiv2.proto
runtime/: BUILD.bazel  context.go  context_test.go  errors.go  errors_test.go  handler.go  handler_test.go  marshal_httpbody.go  marshal_json_test.go  marshal_jsonpb_test.go  marshal_proto_test.go  marshaler_registry_test.go  mux_test.go  pattern_test.go  query.go  query_test.go
runtime/internal/: BUILD.bazel
utilities/: BUILD.bazel  trie_test.go
