load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/therealwardo/grpc-gateway/examples",
    visibility = ["//visibility:private"],
    deps = [
        "//examples/examplepb:go_default_library",
        "//runtime:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "examples",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "client_test.go",
        "integration_test.go",
        "main_test.go",
        "proto_error_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//examples/clients/abe:go_default_library",
        "//examples/clients/echo:go_default_library",
        "//examples/examplepb:go_default_library",
        "//examples/server:go_default_library",
        "//examples/sub:go_default_library",
        "//runtime:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@go_googleapis//google/rpc:status_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
