load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-grpc-gateway",
    visibility = ["//visibility:private"],
    deps = [
        "//protoc-gen-grpc-gateway/descriptor:go_default_library",
        "//protoc-gen-grpc-gateway/gengateway:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
    ],
)

go_binary(
    name = "protoc-gen-grpc-gateway",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
