load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "examplepb_proto",
    srcs = [
        "a_bit_of_everything.proto",
        "echo_service.proto",
        "flow_combination.proto",
        "stream.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//examples/sub:sub_proto",
        "//examples/sub2:sub2_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "examplepb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/therealwardo/grpc-gateway/examples/examplepb",
    proto = ":examplepb_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/sub:go_default_library",
        "//examples/sub2:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "a_bit_of_everything.pb.gw.go",
        "echo_service.pb.gw.go",
        "flow_combination.pb.gw.go",
        "stream.pb.gw.go",
    ],
    embed = [":examplepb_go_proto"],
    importpath = "github.com/therealwardo/grpc-gateway/examples/examplepb",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/sub:go_default_library",
        "//runtime:go_default_library",
        "//utilities:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_therealwardo_grpc_gateway//examples/sub2:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
