load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "sub_proto",
    srcs = ["message.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "sub_go_proto",
    importpath = "github.com/therealwardo/grpc-gateway/examples/sub",
    proto = ":sub_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":sub_go_proto"],
    importpath = "github.com/therealwardo/grpc-gateway/examples/sub",
    visibility = ["//visibility:public"],
)
