load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["generator.go"],
    importpath = "github.com/therealwardo/grpc-gateway/protoc-gen-grpc-gateway/generator",
    visibility = ["//visibility:public"],
    deps = [
        "//protoc-gen-grpc-gateway/descriptor:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
    ],
)
