load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "generator.go",
        "template.go",
    ],
    importpath = "github.com/therealwardo/grpc-gateway/protoc-gen-grpc-gateway/gengateway",
    visibility = ["//visibility:public"],
    deps = [
        "//protoc-gen-grpc-gateway/descriptor:go_default_library",
        "//protoc-gen-grpc-gateway/generator:go_default_library",
        "//utilities:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "generator_test.go",
        "template_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//protoc-gen-grpc-gateway/descriptor:go_default_library",
        "//protoc-gen-grpc-gateway/httprule:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)
