load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "compile.go",
        "parse.go",
        "types.go",
    ],
    importpath = "github.com/therealwardo/grpc-gateway/protoc-gen-grpc-gateway/httprule",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_grpc_ecosystem_therealwardo//utilities:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "compile_test.go",
        "parse_test.go",
        "types_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_grpc_ecosystem_therealwardo//utilities:go_default_library",
    ],
)
