load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "generator.go",
        "template.go",
        "types.go",
    ],
    importpath = "github.com/therealwardo/grpc-gateway/protoc-gen-swagger/genswagger",
    visibility = ["//visibility:public"],
    deps = [
        "//protoc-gen-swagger/options:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_grpc_ecosystem_therealwardo//protoc-gen-grpc-gateway/descriptor:go_default_library",
        "@com_github_grpc_ecosystem_therealwardo//protoc-gen-grpc-gateway/generator:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["template_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_grpc_ecosystem_therealwardo//protoc-gen-grpc-gateway/descriptor:go_default_library",
        "@com_github_grpc_ecosystem_therealwardo//protoc-gen-grpc-gateway/httprule:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)
