load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "internal_proto",
    srcs = ["stream_chunk.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:any_proto"],
)

go_proto_library(
    name = "internal_go_proto",
    importpath = "github.com/grpc-ecosystem/grpc-gateway/runtime/internal",
    proto = ":internal_proto",
    visibility = ["//runtime:__subpackages__"],
)

go_library(
    name = "go_default_library",
    embed = [":internal_go_proto"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/runtime/internal",
    visibility = ["//runtime:__subpackages__"],
)
