load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "ProtobufDuration.go",
        "a_bit_of_everything_nested.go",
        "a_bit_of_everything_service_api.go",
        "api_client.go",
        "api_response.go",
        "configuration.go",
        "examplepb_a_bit_of_everything.go",
        "examplepb_numeric_enum.go",
        "nested_deep_enum.go",
        "protobuf_empty.go",
        "sub_string_message.go",
    ],
    importpath = "github.com/therealwardo/grpc-gateway/examples/clients/abe",
    visibility = ["//visibility:public"],
    deps = ["@com_github_go_resty_resty//:go_default_library"],
)
