load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/therealwardo/grpc-gateway/examples/server/cmd/example-server",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//examples/server:go_default_library",
    ],
)

go_binary(
    name = "example-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
